[package]
name = "prae"
version = "0.7.4"
edition = "2021"
authors = ["Alex Ryapolov <ryapolov@pm.me>"]
license = "Unlicense"
description = "A crate that aims to provide a better way to define types that require validation"
documentation = "https://docs.rs/prae"
readme = "../README.md"
repository = "https://github.com/teenjuna/prae"
keywords = ["validation", "macro", "invariant", "generation"]
categories = ["development-tools"]

[features]
default = []
unprocessed = []

[dependencies]
prae_macro = { version = "0.5", path = "../prae-macro" }
serde = { version = "1.0", optional = true }

[dev-dependencies]
assert_matches = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
