[package]
name = "prae_macro"
version = "0.2.0"
authors = ["Alex Ryapolov <ryapolov@pm.me>"]
edition = "2018"
license = "Unlicense"
description = "A proc macro for the `prae` crate. Should not be used directly."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.27"
quote = "1.0.9"
syn = { version = "1.0.73", features = ["full", "extra-traits"] }
